bootstrap/cluster-resources/test/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    cert-manager.io/common-name: argocd.k3s-t.homelab.local
    ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.k3s-t.homelab.local
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.k3s-t.homelab.local
    secretName: argocd-tls
